--- a/src/App.css
+++ b/src/App.css
@@ -268,7 +268,57 @@ border: 1px solid rgba(220, 20, 60, 0.3);
   -webkit-line-clamp: 4;
 }
 
-/* search-btn */
-
-
-/* CSS */
+/* react-slider */
+.sliderFirstBg{
+  /* From https://css.glass */
+background: rgba(0, 0, 0, 0.44);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(1.4px);
+-webkit-backdrop-filter: blur(1.4px);
+border: 1px solid rgba(0, 0, 0, 0.3);
+}
+.sliderSecondBg{
+  /* From https://css.glass */
+background: rgba(255, 255, 255, 0.18);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(2.2px);
+-webkit-backdrop-filter: blur(2.2px);
+border: 1px solid rgba(255, 255, 255, 0.25);
+}
+/* from app file */
+::-webkit-scrollbar{
+  width:6px;
+}
+::-webkit-scrollbar-thumb{
+  background:linear-gradient(#FF5F6D,#FFC371);
+  border-radius:5px;
+  -webkit-border-radius:5px;
+  -moz-border-radius:5px;
+  -ms-border-radius:5px;
+  -o-border-radius:5px;
+}
+/* responsive-mode navbar */
+nav .swap-rotate .swap-on{
+  width:20px;
+}
+nav .swap-rotate input:checked ~ .swap-off{
+  transform:translate(0);
+  -webkit-transform:translate(0);
+  -moz-transform:translate(0);
+  -ms-transform:translate(0);
+  -o-transform:translate(0);
+}
+.resDropDown1{
+  animation-delay:0.5s;
+}
+.resDropDown2{
+  animation-delay: 1s;
+}
+.resDropDown3{
+  animation-delay: 1.5s;
+}
+.resDropDown4{
+  animation-delay: 2s;
+}
